# shawn-le-snippets

./: ProjectHome.md  README.md  add_bg_class_to_trainannot.py  vector_n_text_file.cpp  visualize_detection.py
Cpp/CppFunction/: ReadMe.txt
Cpp/CppFunction/array_of_vector/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Cpp/CppFunction/cmd line input sparser/: CMakeLists.txt  cmd input sparser.cpp
Cpp/CppFunction/constructor init list/: CMakeLists.txt  main.cpp
Cpp/cmd line input/: CMakeLists.txt
Cpp/exit a program/: main_test_prog_exit.cpp
Cpp/function pointer/: CMakeLists.txt
Cpp/pointer/: main.cpp
Cpp/test define/: CMakeLists.txt  main_test_define.cpp
Cpp/virtual function/: main.cpp
CppFunction/CppFunction/: CppFunction.sln
CppFunction/CppFunction/CppFunction/: stdafx.cpp
Eigen/testRPY_rot/: CMakeLists.txt  main_test.cpp
FileCopier/: FileCopier.ncb
FileCopier/FileCopier/: FileCopier.cpp
FileCopier/FileCopier/Debug/: BuildLog.htm  mt.dep
Func Template/demo_1/: demo_1.ncb  demo_1.sln
OpenCV/: HBVS_proj_structure.cpp  Input-OutputArray work.cpp  MAT math operations_v20.cpp  MAT math operations_v23.cpp  MAT passed around.cpp  MAT passed around_v1.5.cpp  MAT passed around_v2.5.cpp  MatWork.cpp  MatWork.hpp  TextWork.cpp.lnk  code snippets.cpp  readWC_opencv.cpp
OpenCV/BumbleBee2/: BumbleBee2.cpp  BumbleBee2.h  grabstereo_v20.cpp
OpenCV/Color Segmentation/: ColorDetector.h
OpenCV/FMVUcam/: FMVUcam.cpp  FMVUcam.h  main.cpp
OpenCV/Tabletop Bkgnd Segmentation/: bkgnd_segm.cpp
OpenCV/camera_calibration/: cam_calib.py
OpenCV/rvec_tvec_Rodriguez/: CMakeLists.txt  CoordTransf.cpp
OpenCV/trackbar/: main_test.cpp
OpenCV/void pointer Mat/: CMakeLists.txt
STL/STL_map/STL_map/: STL_map.sln
STL/STL_vector/: STL_vector.sln
Template/ClassTemplate/: ClassTemplate.sln
TextStream/TextReadWrite/: Logger.org.cpp  TextReadWrite.vcproj  TextWork.cpp  TextWork.h  log1.txt  readme.txt
TextStream/text_file_editing/: CMakeLists.txt
boost/thread/: CMakeLists.txt
boost/thread_test/: main.cpp
folder - file listing with Boost/: FolderSparser.cpp  FolderSparser.h
folder - file listing/FileFolderIteratior/: FolderSparser.cpp  FolderSparser.h  test.cpp
inherited_class_OpenCV2.4.2/inherited_class_OpenCV2.4.2/: find_obj_v1.0.cpp  find_obj_v1.2.cpp  find_obj_v1.3.cpp  find_obj_v2.0.cpp  find_obj_v3.2.cpp  find_obj_v4.0.cpp  inherited_class.sln  testOpenCV2.4.2.vcproj
trunk/: simple_RS232_denso CLASS.lnk
trunk/Eigen/testmatrix/: CMakeLists.txt  main_test.cpp
trunk/FileCopier/: FileCopier.sln
trunk/OpenCV/: CvMat ele access.cpp  CvMat math operators.cpp  MAT passed around_v2.0.cpp  MAT passed around_v2.2.cpp  MatWork.hpp  TextWork.h.lnk
trunk/array of class pointer/: mathwork.cpp
trunk/boost/thread_test/: CMakeLists.txt
use struct and typedef struct/test_struct/: test_struct.ncb
use_class/: use_class.sln
use_class/use_class/: ReadMe.txt  stdafx.cpp  use_class.cpp  use_class.vcproj  use_class_v10.cpp
(+178 files in other folders)
